main-app-shell.yml
apiVersion: v1
kind: Pod
metadata:
  name: main-app-shell
spec:
  containers:
  - name: phoenix-pop-kube-shell
    image: chgu82837/phoenix-pop-kube:0.1.1
    command: ["tail", "-f", "/dev/null"]
