main-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-app-deployment
spec:
  selector:
    matchLabels:
      app: main-app
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: main-app
    spec:
      containers:
      #- name: main-app-nginx # as stateless application
        #image: nginx:latest
        #ports:
        #- containerPort: 80
      - name: phoenix-pop-kube
        image: chgu82837/phoenix-pop-kube:0.1.1
        ports:
        - containerPort: 4000
