nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
#j     - name: nginx
        #image: nginx:1.14.2
        #ports:
        #- containerPort: 80
      #- name: elct9620-auto-deploy-example
        #image: elct9620/auto-deploy-example:0.1.3
        #ports:
        #- containerPort: 9292
        #env:
          #- name: DATABASE_URL
            #value: "postgres://app:apppass@mypostgres.default.svc.cluster.local/app"
      - name: phoenix-pop-kube
        image: chgu82837/phoenix-pop-kube:0.1.1
        ports:
        - containerPort: 9292
