main-app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx

    # https:
    cert-manager.io/cluster-issuer: main-letsencrypt-issuer
spec:
  rules:
  - host: "popkube.pastleo.me"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: main-app-svc
            port:
              number: 80

  # https:
  tls:
  - hosts:
    - popkube.pastleo.me
    secretName: main-letsencrypt-secret-popkube.pastleo.me
